# app/Models/Order.php
@@ -1,0 +1,22 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Model;
+
+class Order extends Model
+{
+    protected $fillable = [
+    'user_id', 'order_code', 'total_amount', 'shipping_address', 'status'
+];
+
+public function user()
+{
+    return $this->belongsTo(User::class);
+}
+
+public function items()
+{
+    return $this->hasMany(OrderItem::class);
+}
+}
