# app/Models/OrderItem.php
@@ -1,0 +1,22 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Model;
+
+class OrderItem extends Model
+{
+    protected $fillable = [
+    'order_id', 'product_id', 'quantity', 'price'
+];
+
+public function product()
+{
+    return $this->belongsTo(Product::class); // Asumsi model Product sudah ada
+}
+
+public function order()
+{
+    return $this->belongsTo(Order::class);
+}
+}
